added bubble chart

--- a/spotify_scrolly_side/sticky-side.html
+++ b/spotify_scrolly_side/sticky-side.html
@@ -197,7 +197,7 @@
         flex: 1;
       }
 
-      #gg {
+      #viz1638328411540 {
         position: -webkit-sticky;
         position: sticky;
         width: 100%;
@@ -429,11 +429,8 @@
         </article_3>
 
         <div class="sticky-thing_3" data-aos="fade-up" data-aos-delay="200">
-          <div id="gg"></div>
-          <br>
-          <div id="gg"></div>
 
-
+          <div class='tableauPlaceholder' id='viz1638328411540' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;DarkThemedArtistandSongChurn&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='DarkThemedArtistandSongChurn&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;DarkThemedArtistandSongChurn&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>
 
         </div>
       </section>
@@ -464,6 +461,7 @@
         </div>
       </section>
 
+      <section id="gap"></section>
 
 
       <section id="outro" data-aos="fade-up" data-aos-delay="200">
@@ -672,6 +670,17 @@
         if (name === "key") return new Inspector(document.querySelector("#observablehq-key-8fea6487"));
       });
     </script>
+
+<!-- Bubble plot -->            
+
+<script type='text/javascript'>
+var divElement = document.getElementById('viz1638328411540');
+var vizElement = divElement.getElementsByTagName('object')[0];
+if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='1327px';}
+var scriptElement = document.createElement('script');
+scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+vizElement.parentNode.insertBefore(scriptElement, vizElement);
+</script>
 
 <!-- Radial plot -->
 
