--- a/spotify_scrolly_side/sticky-side.html
+++ b/spotify_scrolly_side/sticky-side.html
@@ -350,7 +350,7 @@
         <!-- <a href="https://github.com/russellgoldenberg/scrollama">scrollama.js</a> -->
         <div class="nav__examples">
           <a href="sticky-side.html"><b>Scrolly</b></a>
-          <a href="dashboard.html"><b>Dashboard</b></a>
+          <a href="about.html"><b>About</b></a>
         </div>
       </nav>
       <section id="intro">
