adding intro paragraph

--- a/spotify_scrolly_side/sticky-side.html
+++ b/spotify_scrolly_side/sticky-side.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -360,11 +360,21 @@
         </p>
       </section>
 
+      <section id="big_gap"></section>
+
+      <section id="intro">
+        <h2 class="intro__p">Throughout the ebbs and flows of the pandemic, music has remained as a critical piece of how humans express, process, and cope with emotions. 
+          <br>
+          <br>
+
+          Using Spotify’s Developer API and Spotify’s Global Top 200 Charts, we analyzed ways in which the pandemic has affected the types of music we consumed.</h2>
+      </section>
+
+      <section id="gap"></section>
+
+
       <section id="scrolly" data-aos="fade-up" data-aos-delay="200">
         <article>
-          <div class="step" data-step="1" >
-            <p>Throughout the ebbs and flows of the pandemic, music has remained as a critical piece of how humans express, process, and cope with emotions. Using Spotify’s Developer API and Spotify’s Global Top 200 Charts, we analyzed ways in which the pandemic has affected the types of music we consumed.</p>
-          </div>
           <div class="step" data-step="2">
             <p><b>1. Generally the most popular genres stayed popular...</b></p>
           </div>
@@ -461,7 +471,7 @@
         </div>
       </section>
 
-      <section id="gap"></section>
+      <section id="big_gap"></section>
 
 
       <section id="outro" data-aos="fade-up" data-aos-delay="200">
