--- a/spotify_scrolly_side/sticky-side.html
+++ b/spotify_scrolly_side/sticky-side.html
@@ -116,7 +116,7 @@
         flex: 1;
       }
 
-      #observablehq-chart2-8fea6487 {
+      #observablehq-chart2-d64a98e1 {
         position: -webkit-sticky;
         position: sticky;
         width: 100%;
@@ -124,7 +124,14 @@
         /* animation: enter-right 2s ease-out 10s; */
       }
 
-      #observablehq-key-8fea6487 {
+      #observablehq-key2-d64a98e1 {
+        /* position: -webkit-sticky;
+        position: sticky; */
+        width: 100%;
+        margin: 10px 0;
+      }
+
+      #observablehq-key3-d64a98e1 {
         /* position: -webkit-sticky;
         position: sticky; */
         width: 100%;
@@ -362,29 +369,28 @@
 
       <section id="big_gap"></section>
 
-      <section id="intro">
+      <section id="intro" data-aos="fade-up" data-aos-delay="200">
         <h2 class="intro__p">Throughout the ebbs and flows of the pandemic, music has remained as a critical piece of how humans express, process, and cope with emotions. 
           <br>
-          <br>
+      </section>
 
-          Using Spotify’s Developer API and Spotify’s Global Top 200 Charts, we analyzed ways in which the pandemic has affected the types of music we consumed.</h2>
+      <section id="intro" data-aos="fade-up" data-aos-delay="400">
+        <h2 class="intro__p">Using Spotify’s Developer API and Spotify’s Global Top 200 Charts, we analyzed ways in which the pandemic has affected the types of music we consumed.</h2>
       </section>
 
       <section id="gap"></section>
 
+      <section id="intro" data-aos="fade-up" data-aos-delay="200">
+        <h2 class="intro__p"><b>1. Generally the most popular genres stayed popular...</b></h2>
+      </section>
+
 
       <section id="scrolly" data-aos="fade-up" data-aos-delay="200">
         <article>
-          <div class="step" data-step="2">
-            <p><b>1. Generally the most popular genres stayed popular...</b></p>
-          </div>
-          <div class="step" data-step="3">
+          <div class="step">
             <p>With an overview of the genres that make up the daily Top 200 Charts, we see a pretty consistent breakdown over the last 4 years. <b>Hip hop/rap </b> and <b>edm </b>tracks consistently dominate.</p>
           </div>
-          <div class="step" data-step="4">
-            <p><b>2. We listened to more pop and latino music...</b></p>
-          </div>
-          <div class="step" data-step="4">
+          <div class="step">
             <p>By separating out each genre, we see upward trends in <b>pop </b> and <b>latino </b> music in March/April 2020, coinciding with periods of isolation for many people as stay at home orders toggled on and off across the world.</p>
           </div>
         </article>
@@ -393,34 +399,42 @@
           <div id="observablehq-viewof-stack-f7536c4c"></div>
           <br>
           <div id="observablehq-chart3-f7536c4c"></div>
+          <div id="observablehq-key2-d64a98e1"></div>
         </div>
       </section>
 
       <section id="gap"></section>
+
+      <section id="intro" data-aos="fade-up" data-aos-delay="200">
+        <h2 class="intro__p"><b>2. We listened to more pop and latino music...</b></h2>
+      </section>
       
       <section id="scrolly_2" data-aos="fade-up" data-aos-delay="200">
         <article_2>
-          <div class="step_2" data-step="2">
-            <p><b>3. We listened to more unique songs...</b></p>
-          </div>
-          <div class="step_2" data-step="3">
+          <div class="step_2" >
             <p>In 2020, we sampled more new music with XYZ amount more than 2019, largely driven by the increase in new pop and latino songs. </p>
           </div>
-          <div class="step_2" data-step="3">
+          <div class="step_2" >
             <p>With the pandemic driving many to relocate, we see an increased appetite for new music coincide with shifts in lifestyles.</p>
           </div>
-          <div class="step_2" data-step="3">
+          <div class="step_2" >
             <p>We can also see the individual songs across each genre and their associated chart date.</p>
           </div>
         </article_2>
 
         <div class="sticky-thing_2" data-aos="fade-up" data-aos-delay="200">
-          <div id="observablehq-chart2-8fea6487"></div>
-          <div id="observablehq-key-8fea6487"></div>
+
+          <div id="observablehq-chart2-d64a98e1"></div>
+          <div id="observablehq-key3-d64a98e1"></div>
+
         </div>
       </section>
 
       <section id="gap"></section>
+
+      <section id="intro" data-aos="fade-up" data-aos-delay="200">
+        <h2 class="intro__p"><b>3. We listened to more unique songs and artists...</b></h2>
+      </section>
 
       <section id="scrolly_3" data-aos="fade-up" data-aos-delay="200">
         <article_3>
@@ -446,6 +460,10 @@
       </section>
 
       <section id="gap"></section>
+
+      <section id="intro" data-aos="fade-up" data-aos-delay="200">
+        <h2 class="intro__p"><b>4. We listened to happier songs, with less lyrics...</b></h2>
+      </section>
       
       <section id="scrolly_4" data-aos="fade-up" data-aos-delay="200">
         <article_4>
@@ -519,7 +537,7 @@
         scroller
           .setup({
             step: "#scrolly article .step",
-            offset: 0.33,
+            offset: 0.5,
             debug: true
           })
           .onStepEnter(handleStepEnter);
@@ -556,7 +574,7 @@
     scroller_2
       .setup({
         step: "#scrolly_2 article_2 .step_2",
-        offset: 0.33,
+        offset: 0.5,
         debug: false
       })
       .onStepEnter(handleStepEnter_2);
@@ -606,7 +624,7 @@
     scroller_3
       .setup({
         step: "#scrolly_3 article_3 .step_3",
-        offset: 0.33,
+        offset: 0.5,
         debug: false
       })
       .onStepEnter(handleStepEnter_3);
@@ -641,7 +659,7 @@
     scroller_4
       .setup({
         step: "#scrolly_4 article_4 .step_4",
-        offset: 0.33,
+        offset: 0.5,
         debug: false
       })
       .onStepEnter(handleStepEnter_4);
@@ -672,14 +690,15 @@
 
 <!-- Incidence plot bar -->
 
-    <script type="module">
+      <script type="module">
       import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@4/dist/runtime.js";
       import define from "https://api.observablehq.com/d/6b86b672ff964b1e.js?v=3";
       new Runtime().module(define, name => {
-        if (name === "chart2") return new Inspector(document.querySelector("#observablehq-chart2-8fea6487"));
-        if (name === "key") return new Inspector(document.querySelector("#observablehq-key-8fea6487"));
+        if (name === "chart2") return new Inspector(document.querySelector("#observablehq-chart2-d64a98e1"));
+        if (name === "key2") return new Inspector(document.querySelector("#observablehq-key2-d64a98e1"));
+        if (name === "key3") return new Inspector(document.querySelector("#observablehq-key3-d64a98e1"));
       });
-    </script>
+      </script>
 
 <!-- Bubble plot -->            
 
