added about page

--- a/spotify_scrolly_side/index.html
+++ b/spotify_scrolly_side/index.html
@@ -411,7 +411,7 @@
       <nav>
         <!-- <a href="https://github.com/russellgoldenberg/scrollama">scrollama.js</a> -->
         <div class="nav__examples">
-          <a href="sticky-side.html"><b>Scrolly</b></a>
+          <a href="index.html"><b>Scrolly</b></a>
           <a href="about.html"><b>About</b></a>
         </div>
       </nav>
@@ -516,7 +516,8 @@
       <section id="scrolly_3" data-aos="fade-up" data-aos-delay="200">
         <article_3>
           <div class="step_3" data-step="1">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>We can analyze the volatility of song churn using the chart below. Are we able to see an increase or decrease in the number of songs released for each artist? In this visualization, use the drop down to select a month to view. 
+            </p>
           </div>
           <div class="step_3" data-step="2">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
