fixed about page scroll

--- a/spotify_scrolly_side/about.html
+++ b/spotify_scrolly_side/about.html
@@ -33,6 +33,8 @@
       }
 
       
+
+      
     </style>
   </head>
 
@@ -76,15 +78,17 @@
           </div>
 
           <div class="step" data-aos="fade-up" data-aos-delay="200">
-            <h3>We hope that fans and music heads like us can use our site to explore how the Coronavirus Pandemic has changed listening patterns on Spotify. 
+            <h3>We hope that fans and music heads like us can use our site to explore how the COVID-19 Pandemic has changed listening patterns on Spotify. 
             </h3>
           </div>
-          <div class="step" data-aos="fade-up" data-aos-delay="200">
-            <h3> <i>Created by: Jonathan Whiteley, Jessica Sacks, and Maria DiMedio</i> </h3>
-          </div>
+
         </article>
       </section>
-      <section id="outro"></section>
+      <section id="outro">
+        <div class="step" data-aos="fade-up" data-aos-delay="200">
+            <h4> <i>Created by: Jonathan Whiteley, Jessica Sacks, and Maria DiMedio</i> </h4>
+          </div>
+      </section>
     </main>
 
     <script src="https://unpkg.com/intersection-observer"></script>
