--- a/spotify_scrolly_side/index.html
+++ b/spotify_scrolly_side/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>How has the pandemic changed the types of popular music we listen to?</title>
-    <meta name="description" content="How has the pandemic changed the types of popular music we listen to?" />
+    <title>Spotify Pandemic Trends</title>
+    <meta name="description" content="How has the pandemic changed the music we listen to?" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
     <link href="vendor/aos.css" rel="stylesheet">
@@ -80,7 +80,7 @@
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
-        background-color: #070000;
+        background-color: #000000;
         padding: 1rem;
       }
 
@@ -117,6 +117,7 @@
         z-index: 0;
         top: 12.5vh;
         height: 75vh;
+        background-color: #000000;
         /* Center everything inside */
         display: inline;
         /* align-items: center;
@@ -161,7 +162,7 @@
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
-        background-color: #070707;
+        background-color: #000000;
         padding: 1rem;
       }
 
@@ -207,6 +208,7 @@
         z-index: 0;
         top: 12.5vh;
         height: 75vh;
+        background-color: #000000;
         /* Center everything inside */
         display: inline;
         /* align-items: center;
@@ -249,7 +251,7 @@
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
-        background-color: #070707;
+        background-color: #000000;
         padding: 1rem;
       }
 
@@ -288,6 +290,7 @@
         z-index: 0;
         top: 12.5vh;
         height: 75vh;
+        background-color: #000000;
         /* Center everything inside */
         display: inline;
         /* align-items: center;
@@ -368,6 +371,7 @@
         z-index: 0;
         top: 12.5vh;
         height: 75vh;
+        background-color: #000000;
         /* Center everything inside */
         display: inline;
         /* align-items: center;
@@ -420,7 +424,7 @@
 
       <section id="intro">
         <h1 class="intro__hed" data-aos="fade-up" data-aos-delay="200">
-          <b>How has the pandemic changed the types of popular music we listen to?</b></h1>
+          <b>How has the pandemic changed the world's taste in music?</b></h1>
         <p class="intro__dek" data-aos="fade-up" data-aos-delay="400"> 
           Start scrolling to find out.</p>
       </section>
@@ -499,7 +503,7 @@
           </div>
         </article_2>
 
-        <div class="sticky-thing_2" data-aos="fade-up" data-aos-delay="200">
+        <div class="sticky-thing_2">
 
           <div id="observablehq-chart2-d64a98e1"></div>
           <div id="observablehq-key3-d64a98e1"></div>
@@ -570,7 +574,7 @@
       <section id="big_gap"></section>
 
 
-      <section id="outro" data-aos="fade-up" data-aos-delay="200">
+      <section id="outro" data-aos="fade-up" data-aos-delay="400">
         <p class="intro__dek">
           Here are our final thoughts and takeaways.
           <br> 
