--- a/spotify_scrolly_side/index.html
+++ b/spotify_scrolly_side/index.html
@@ -6,6 +6,13 @@
     <title>Spotify Pandemic Trends</title>
     <meta name="description" content="How has the pandemic changed the music we listen to?" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link href="images/favicon_1.png" rel="icon">
+    <link href="images/apple-touch-icon.png" rel="apple-touch-icon">
+
+    <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
+
+
     <link rel="stylesheet" href="style.css" />
     <link href="vendor/aos.css" rel="stylesheet">
 
