--- a/spotify_scrolly_side/index.html
+++ b/spotify_scrolly_side/index.html
@@ -506,7 +506,7 @@
             <p>With the pandemic driving many to relocate, we see an increased appetite for new music coincide with shifts in lifestyles.</p>
           </div>
           <div class="step_2" >
-            <p>We can also see the individual songs across each genre and their associated chart date.</p>
+            <p>Hover over the chart to see if you recognize any of the individual songs across each genre and their associated chart date.</p>
           </div>
         </article_2>
 
