colors for font

--- a/spotify_scrolly_side/index.html
+++ b/spotify_scrolly_side/index.html
@@ -476,10 +476,12 @@
       <section id="scrolly_1" data-aos="fade-up" data-aos-delay="200">
         <article_1>
           <div class="step_1">
-            <p>With an overview of the genres that make up the daily Top 200 Charts, we see a pretty consistent breakdown over the last 4 years. <b>Hip hop/rap </b> and <b>edm </b>tracks consistently dominate.</p>
+            <p>With an overview of the genres that make up the daily Top 200 Charts, we see a pretty consistent breakdown over the last 4 years. 
+              <span class="rap">Hip hop/rap</span> and <span class="edm">edm</span> tracks consistently dominate.
+            </p>
           </div>
           <div class="step_1">
-            <p>However, by separating out each genre, we see upward trends in <b>pop </b> and <b>latino </b> music in early 2020, coinciding with periods of isolation for many people as stay at home orders were imposed across the world.</p>
+            <p>However, by separating out each genre, we see upward trends in <span class="pop">pop</span> and <span class="latino">latino</span> music in early 2020, coinciding with periods of isolation for many people as stay at home orders were imposed across the world.</p>
           </div>
         </article_1>
 
@@ -500,7 +502,7 @@
       <section id="scrolly_2" data-aos="fade-up" data-aos-delay="200">
         <article_2>
           <div class="step_2" >
-            <p>In 2020 we sampled more new music. In fact, 294 more distinct songs charted in 2020 than 2019, largely driven by the increase in new pop and latino songs. </p>
+            <p>In 2020 we sampled more new music. In fact, 294 more distinct songs charted in 2020 than 2019, largely driven by the increase in new <span class="pop">pop</span> and <span class="latino">latino</span> songs. </p>
           </div>
           <div class="step_2" >
             <p>Hover over the chart to see if you recognize any of the individual songs across each genre and their associated chart date. 2021 data as of Sept 30, 2021.</p>
