Added Jessica insights

--- a/spotify_scrolly_side/index.html
+++ b/spotify_scrolly_side/index.html
@@ -555,16 +555,16 @@
       <section id="scrolly_4" data-aos="fade-up" data-aos-delay="200">
         <article_4>
           <div class="step_4" data-step="1">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Overall, during the pandemic we listened to more valent tracks that contained less speechiness - but we can also examine seasonality impacts to our listening habits.</p>
           </div>
           <div class="step_4" data-step="2">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>The live music peaks typically seen during the spring and summer months are no longer pronounced due to thousands of canceled concerts.</p>
           </div>
           <div class="step_4" data-step="3">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Due to state restrictions on nightlife and many canceled travel plans, there were less danceable songs listened to, particularly during late summer and early spring.</p>
           </div>
           <div class="step_4" data-step="4">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>It also appears that the Pandemic brought on an early Christmas as seen in trends in accousticness and instrumentalness during the month of December.</p>
           </div>
         </article_4>
 
