--- a/spotify_scrolly_website/about.html
+++ b/spotify_scrolly_website/about.html
@@ -23,7 +23,7 @@
       .step {
         margin: 2rem auto 4rem auto;
         background-color:#080808;
-        color: #06bf7f;
+        color: #8a8a8a;
       }
 
       .step p {
