Fixed dropdown text color

--- a/spotify_scrolly_side/index.html
+++ b/spotify_scrolly_side/index.html
@@ -414,6 +414,10 @@
         padding: 1rem;
         font-size: 1.5rem;
       }
+
+      .oi-ec050e > .oi-ec050e-input {
+        color: black;
+      }
     </style>
   </head>
 
